--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,25 @@
+amqp==5.1.1
 asgiref==3.5.2
-Django~=4.1.0
-sqlparse==0.4.2
-Pillow==9.2.0
-flower==1.2.0
+billiard==3.6.4.0
 celery==5.2.7
+click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
+Django==4.1.9
+flower==1.2.0
+humanize==4.6.0
+kombu==5.3.0
+Pillow==9.2.0
+prometheus-client==0.17.0
+prompt-toolkit==3.0.38
+psycopg2==2.9.6
+psycopg2-binary==2.9.6
+python-dotenv==1.0.0
+pytz==2023.3
+six==1.16.0
+sqlparse==0.4.2
+tornado==6.3.2
+typing_extensions==4.6.3
+vine==5.0.0
+wcwidth==0.2.6
