--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
       POSTGRES_DB: shop
     restart: always
     ports:
-    - "5432:5432"
+      - "5432:5432"
 
   rabbitmq:
     image: rabbitmq:3.10.7-management
@@ -25,6 +25,37 @@ services:
       - "15672:15672"
     volumes:
       - rabbitmq:/var/lib/rabbitmq
+
+  app:
+    build:
+      context: ../app
+    environment:
+      DB_NAME: shop
+      DB_USER: shop
+      DB_PASSWORD: shop
+      DB_HOST: db
+      DB_PORT: 5432
+      EMAIL_HOST: 'smtp.yandex.ru'
+      EMAIL_HOST_USER: 'sserver.nikita@yandex.ru'
+      EMAIL_HOST_PASSWORD: 'vpkbqrtzptfnhnbw'
+      EMAIL_PORT: 465
+      DEBUG: 1
+      CELERY_BROKER_URL: 'amqp://rabbitmq'
+      DJANGO_SETTINGS_MODULE: 'myshop.settings'
+      RABBITMQ_DEFAULT_USER: shop
+      RABBITMQ_DEFAULT_PASS: shop
+      SECRET_KEY: 'django-insecure-cd_#avp5&srafvq30@vw+j!b0n1*3d02l6l0)_sx1qo&^e&=bq'
+    ports:
+      - "80:80"
+    command: bash -c "
+      python manage.py migrate
+      && celery -A myshop worker -l info
+      & python manage.py runserver 0.0.0.0:80
+      "
+    depends_on:
+      - db
+      - rabbitmq
+
 
 volumes:
   postgres_data:
