--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -13,6 +13,14 @@ services:
     ports:
       - "5432:5432"
 
+  redis:
+    image: redis:latest
+    restart: always
+    ports:
+      - '6379:6379'
+    volumes:
+      - redis_data:/data
+
   rabbitmq:
     image: rabbitmq:3.10.7-management
     hostname: rabbitmq
@@ -60,3 +68,4 @@ services:
 volumes:
   postgres_data:
   rabbitmq:
+  redis_data:
