--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,15 +1,18 @@
 amqp==5.1.1
 asgiref==3.5.2
+async-timeout==4.0.2
 billiard==3.6.4.0
 celery==5.2.7
 click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
+Deprecated==1.2.14
 Django==4.1.9
 flower==1.2.0
 humanize==4.6.0
 kombu==5.3.0
+packaging==23.1
 Pillow==9.2.0
 prometheus-client==0.17.0
 prompt-toolkit==3.0.38
@@ -17,9 +20,12 @@ psycopg2==2.9.6
 psycopg2-binary==2.9.6
 python-dotenv==1.0.0
 pytz==2023.3
+redis==4.3.4
 six==1.16.0
 sqlparse==0.4.2
 tornado==6.3.2
 typing_extensions==4.6.3
 vine==5.0.0
 wcwidth==0.2.6
+whitenoise==6.4.0
+wrapt==1.15.0
